--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,16 @@ body {
   background-size: 800px;
   background-position: 90% -25%;
 }
+@layer base {
+  li {
+    @apply p-4
+  }
+
+  button {
+    @apply text-white border bg-indigo-600 border-indigo-600
+    hover:bg-transparent hover:text-indigo-600 rounded-md
+  }
+}
 
 #cta {
   background-image: url('./assets/bg-simplify-section-desktop.svg');
